refactor: put api behind version (#69)
